# Haas_Fabian_1919633

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
HA1/: CMakeLists.txt  README.md
HA1/src/: CMakeLists.txt  cli.c  cli.h  main.c
HA1/src/cli/: CMakeLists.txt  cli.c  cli.h  parser.c  parser.h
HA1/src/complex-numbers/: CMakeLists.txt  complex-number.h  complex.h  operations.c  operations.h  parser.c  parser.h
HA1/test/: CMakeLists.txt  check-addition.c  check-division.c  check-division.h  check-multiplication.c  check-multiplication.h  check-parser.c  check-parser.h  check-subtraction.c  check-subtraction.h  check-validation.c  check-validation.h  complex-getter.c  complex-getter.h  main.c
HA1/test/arithmetic/: check-addition.c  check-addition.h  check-division.c  check-division.h  check-multiplication.c  check-multiplication.h  check-subtraction.c  check-subtraction.h  double-comparison.c  double-comparison.h
HA1/test/cli/: check-complex-string.c  check-complex-string.h  check-exponential-form-string.c  check-exponential-form-string.h  check-parser.c  check-parser.h  check-polar-form-string.c  check-polar-form-string.h  check-rectangular-form-string.c  check-rectangular-form-string.h  check-validation.c  check-validation.h  string-expectation.c  string-expectation.h
HA2/: CMakeLists.txt  README.md
HA2/src/: CMakeLists.txt  demo.c
HA2/test/: CMakeLists.txt  approximation-test.c  approximation-test.h  check-with-approximation.c  check-with-approximation.h  check-with-derivative.c  check-with-derivative.h  main.c  sample-functions.c  sample-functions.h
HA3/: CMakeLists.txt  README.md  linked-list.c  linked-list.h  linkedListLib.c  linkedListLib.h  main.c  os-detection.h
HA4/: CMakeLists.txt  README.md  euler.c  euler.h  eulerLib.c  eulerLib.h  main.c
Programmentwurf/Mass_Spring_Damper/: eulerLib.c  eulerLib.h  main.c
Programmentwurf/Simple_Linked_List/: linkedListLib.c  linkedListLib.h  main.c
Vorlesung/Bubble_Sort/: CMakeLists.txt  bubble-sort.c  bubble-sort.h  list-loader.c  list-loader.h  main.c
Vorlesung/Popen_Gnuplot/: main.c
(+18 files in other folders)
