CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
SET(PROJECT_NAME "complex-calculator-test")

PROJECT(${PROJECT_NAME} C)

FILE(GLOB_RECURSE PROJECT_SRC *.c *.h)

INCLUDE_DIRECTORIES(.)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} complex-numbers calculator-cli test-runner)
